# SourceOfTalesUT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.shared  README.md  clickable.yaml  main.cpp  manifest.json.in  sourcetales.apparmor  sourcetales.desktop.in
assets/: assets.qrc
plugins/Example/: plugin.cpp
po/: sourcetales.jhayproject.pot
qml/: Main.qml
tales-client/: CMakeLists.txt
tales-client/example/qml/main/: BlueButton.qml  BrownButton.qml  Button.qml  ChatLog.qml  Client.qml  CompoundSprite.qml  GamePage.qml  ImageButton.qml  LeftPanel.qml  LineEdit.qml  LoginPage.qml  StatusPage.qml  mobile.qml
